--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,28 @@ on:
 
 jobs:
 
+  test:
+    runs-on: ubuntu-22.04
+
+  steps:
+
+    - name: checkout code
+      use: actions/checkout@v3
+
+    - name: Setup JDK 17
+      use: actions/checkout@v3
+      with:
+        java-version: '17'
+        distribution: 'corretto'
+
+    - name: run test using gradle
+      use:  gradle/gradle-build-action@v2
+      arguments:
+          test
+
+
+
+
   build:
     # needs: test
     runs-on: ubuntu-22.04
